<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/txt_main_title"
            android:text="@string/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="25dp"
            android:textSize="25dp"
            />

        <Button
            android:id="@+id/btn_main_spotify"
            android:text="@string/main_btn_spotify"
            android:layout_width="@dimen/main_btn_width"
            android:layout_height="@dimen/main_btn_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txt_main_title"
            android:textSize="16dp"
            android:layout_margin="@dimen/main_btn_margin"
            android:background="#3949AB"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/btn_main_scores"
            android:text="@string/main_btn_scores"
            android:layout_width="@dimen/main_btn_width"
            android:layout_height="@dimen/main_btn_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btn_main_spotify"
            android:textSize="16dp"
            android:layout_margin="@dimen/main_btn_margin"
            android:background="#3949AB"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/btn_main_library"
            android:text="@string/main_btn_library"
            android:layout_width="@dimen/main_btn_width"
            android:layout_height="@dimen/main_btn_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btn_main_scores"
            android:textSize="16dp"
            android:layout_margin="@dimen/main_btn_margin"
            android:background="#3949AB"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/btn_main_build"
            android:text="@string/main_btn_build"
            android:layout_width="@dimen/main_btn_width"
            android:layout_height="@dimen/main_btn_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btn_main_library"
            android:textSize="16dp"
            android:layout_margin="@dimen/main_btn_margin"
            android:background="#3949AB"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/btn_main_xyz"
            android:text="@string/main_btn_xyz"
            android:layout_width="@dimen/main_btn_width"
            android:layout_height="@dimen/main_btn_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btn_main_build"
            android:textSize="16dp"
            android:layout_margin="@dimen/main_btn_margin"
            android:background="#3949AB"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/btn_main_capstone"
            android:text="@string/main_btn_capstone"
            android:layout_width="@dimen/main_btn_width"
            android:layout_height="@dimen/main_btn_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btn_main_xyz"
            android:textSize="16dp"
            android:layout_margin="@dimen/main_btn_margin"
            android:background="#FF4081"
            android:textColor="#FFFFFF"
            android:capitalize="characters"
            />

    </RelativeLayout>
</ScrollView>